Add logic to support github pages

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 node_modules
 dist/bundle.js
-dist/*.wasm*
+dist/module.untouched.wasm
+dist/module.untouched.wasm.map
+dist/unit.untouched.wasm
+dist/unit.untouched.wasm.map
 yarn-error.log
