Removing binary files from master branch

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 node_modules
+dist/bundle.js
+dist/module.optimized.wasm
+dist/module.optimized.wasm.map
 dist/module.untouched.wasm
 dist/module.untouched.wasm.map
 dist/unit.untouched.wasm
