--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "test": "jest",
     "serve": "http-server dist -o",
     "build:watch": "nodemon -e ts --watch src --watch __tests__ --exec 'yarn build:untouched; yarn build:optimized; yarn build:unit; yarn test; yarn build:client'",
-    "build:client": "webpack",
+    "build:client": "webpack --config webpack.dev.js",
+    "build:client:prod": "webpack --config webpack.prod.js",
     "build:untouched": "asc src/assembly/module.ts -b dist/module.untouched.wasm --validate --sourceMap --measure --importMemory --use Math=JSMath",
     "build:optimized": "asc src/assembly/module.ts -b dist/module.optimized.wasm --validate --sourceMap --measure --optimize --importMemory --use Math=JSMath",
     "build:unit": "asc src/assembly/unit.ts -b dist/unit.untouched.wasm --validate --sourceMap --measure --importMemory --use Math=JSMath"
@@ -41,8 +42,10 @@
     "nodemon": "^1.18.4",
     "ts-jest": "^23.1.4",
     "typescript": "^3.0.3",
+    "uglifyjs-webpack-plugin": "^1.3.0",
     "webpack": "^4.0.1",
-    "webpack-cli": "^2.0.9"
+    "webpack-cli": "^2.0.9",
+    "webpack-merge": "^4.1.4"
   },
   "dependencies": {
     "@types/node": "^10.9.4",
